--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,13 +1,15 @@
 .main {
   height: 100vh;
   width: 100vw;
-  border: 1px solid green;
+  /* background-color: firebrick; */
+  background: rgb(34, 57, 195);
+  background: linear-gradient(0deg, rgba(34, 57, 195, 1) 0%, rgba(131, 48, 99, 1) 94%);
 }
 
 .box {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 100%;
 }
