--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,9 @@
 .main {
   height: 100vh;
   width: 100vw;
-  /* background-color: firebrick; */
-  background: rgb(34, 57, 195);
-  background: linear-gradient(0deg, rgba(34, 57, 195, 1) 0%, rgba(131, 48, 99, 1) 94%);
+  background-color: #000;
+  /* background: rgb(34, 57, 195); */
+  /* background: linear-gradient(0deg, rgba(34, 57, 195, 1) 0%, rgba(131, 48, 99, 1) 94%); */
 }
 
 .box {
